WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199952
Links stop working after long-pressing a link (WK1)
https://bugs.webkit.org/show_bug.cgi?id=199952
Summary
Links stop working after long-pressing a link (WK1)
Antoine Quint
Reported
2019-07-19 11:01:53 PDT
Links stop working after long-pressing a link (WK1)
Attachments
Patch
(5.32 KB, patch)
2019-07-19 11:04 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2019-07-19 11:04:21 PDT
Created
attachment 374474
[details]
Patch
Antoine Quint
Comment 2
2019-07-19 11:04:26 PDT
<
rdar://problem/52291860
>
Wenson Hsieh
Comment 3
2019-07-19 11:32:52 PDT
Comment on
attachment 374474
[details]
Patch r=mews
WebKit Commit Bot
Comment 4
2019-07-19 12:48:00 PDT
Comment on
attachment 374474
[details]
Patch Clearing flags on attachment: 374474 Committed
r247650
: <
https://trac.webkit.org/changeset/247650
>
WebKit Commit Bot
Comment 5
2019-07-19 12:48:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug