Links stop working after long-pressing a link (WK1) https://bugs.webkit.org/show_bug.cgi?id=199952 <rdar://problem/52291860>

Patch by Antoine Quint <graouts@apple.com> on 2019-07-19
Reviewed by Wenson Hsieh.

Source/WebCore:

Test: fast/events/touch/ios/click-after-long-press.html

When EventHandler::tryToBeginDragAtPoint() is called, we must reset m_mousePressed to false so that
WebChromeClientIOS::observedContentChange() is called by EventHandler::mousePressed() when we would
process the next tap after a drag interaction.

* page/ios/EventHandlerIOS.mm:
(WebCore::EventHandler::tryToBeginDragAtPoint):

LayoutTests:

* fast/events/touch/ios/click-after-long-press-expected.txt: Added.
* fast/events/touch/ios/click-after-long-press.html: Added.

Canonical link: https://commits.webkit.org/213815@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247650 268f45cc-cd09-0410-ab3c-d52691b4dbfc