Source/WebCore/page/ios/EventHandlerIOS.mm
@@ -698,6 +698,9 @@ bool EventHandler::tryToBeginDragAtPoint(const IntPoint& clientPosition, const I
     bool handledDrag = m_mouseDownMayStartDrag && handleMouseDraggedEvent(hitTestedMouseEvent, DontCheckDragHysteresis);
     // Reset this bit to prevent autoscrolling from updating the selection with the last mouse location.
     m_mouseDownMayStartSelect = false;
+    // Reset this bit to ensure that WebChromeClientIOS::observedContentChange() is called by EventHandler::mousePressed()
+    // when we would process the next tap after a drag interaction.
+    m_mousePressed = false;
     return handledDrag;
 }
 
